# CppNanodegree

./: .gitignore  README.md
1-system-monitor/include/: linux_parser.h  process.h  system.h
1-system-monitor/src/: ncurses_display.cpp  process.cpp  processor.cpp  system.cpp
2-system-monitor/: CMakeLists.txt  README.md
2-system-monitor/include/: format.h  linux_parser.h  process.h  processor.h  system.h
2-system-monitor/src/: format.cpp  linux_parser.cpp  main.cpp  ncurses_display.cpp  process.cpp  processor.cpp  system.cpp
3-memory-management/src/: chatbot.cpp  chatbot.h  chatgui.cpp  chatlogic.cpp  graphnode.cpp
4-concurrency/: CMakeLists.txt
4-concurrency/src/: Intersection.cpp  TrafficLight.cpp  TrafficLight.h
5-capstone/: .gitignore  CMakeLists.txt  README.md  README_UdacityVM.md  build_and_execute.sh  conanfile.txt  install_prerequisites.sh
5-capstone/MeasurementAnalyzer/: MeasurementAnalyzer.pro  main.qml  mainwindow.cpp  mainwindow.h  mainwindow.ui
5-capstone/imageprocessing/: CMakeLists.txt  imageprocessing.cpp  imageprocessing.h
5-capstone/include/: LevelHandler.h  LevelSelectorWindow.h  SudokuDetector.h  SudokuSolver.h  board.h
5-capstone/resources/level/: Example02.sdku
5-capstone/resources/models/: frozen_mnist.pb  frozen_mnist_retrained.pb
5-capstone/src/: LevelHandler.cpp  LevelSelectorWindow.cpp  LevelSelectorWindow.ui  SudokuDetector.cpp  SudokuSolver.cpp  SudokuSolver.ui  board.cpp  main.cpp
5-capstone/src/ui/: Sudoku_Gui.pro
5-capstone/sudoku/: CMakeLists.txt  sudoku.cpp  sudoku.h
5-capstone/sudoku_gui/: CMakeLists.txt
5-capstone/sudoku_gui/include/: level_handler.h  level_selector_ui.h  style.h  sudoku_solver_ui.h
5-capstone/sudoku_gui/src/: LevelSelectorUi.ui  SudokuSolverUi.ui  level_handler.cpp  level_selector_ui.cpp  main.cpp  sudoku_solver_ui.cpp
5-capstone/training/cpp/: CMakeLists.txt  prepare_training_data.cpp
5-capstone/training/python/: finetunemodel.py  freezemodel.py  testmodel.py  train.py
5-capstone/training/python/frozen_models/: frozen_graph.pb
5-capstone/training/python/mnist/: fingerprint.pb  keras_metadata.pb  saved_model.pb
5-capstone/training/python/mnist/variables/: variables.index
5-capstone/training/python/mnist_retrained/: fingerprint.pb  keras_metadata.pb  saved_model.pb
5-capstone/training/python/mnist_retrained/variables/: variables.index
